clearing pom